refactor: Rename project and update metadata
Rename the project from "Flowly Collector" to "Hero Designs" and update related metadata including the package name, HTML title, meta descriptions, and keywords. Adjust physics parameters for smoother motion in the hero component.

--- a/index.html
+++ b/index.html
@@ -3,7 +3,29 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Flowly | Website Collector</title>
+    
+    <!-- SEO & Meta -->
+    <title>Hero Designs | High-Fidelity UI Inspiration</title>
+    <meta name="description" content="A curated library of professional, high-fidelity website hero sections built with React, Tailwind CSS, and Framer Motion. Explore modern, animated web interfaces." />
+    <meta name="keywords" content="React, Tailwind CSS, Framer Motion, Hero Section, Web Design, UI Inspiration, Frontend, Animation, Landing Page" />
+    <meta name="author" content="Hero Designs" />
+    <meta name="theme-color" content="#050505" />
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website" />
+    <meta property="og:title" content="Hero Designs | High-Fidelity UI Inspiration" />
+    <meta property="og:description" content="Explore premium, animated landing page concepts built with modern web technologies." />
+    <meta property="og:image" content="https://images.unsplash.com/photo-1618005182384-a83a8bd57fbe?q=80&w=1200&auto=format&fit=crop" />
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image" />
+    <meta property="twitter:title" content="Hero Designs | High-Fidelity UI Inspiration" />
+    <meta property="twitter:description" content="Explore premium, animated landing page concepts built with modern web technologies." />
+    <meta property="twitter:image" content="https://images.unsplash.com/photo-1618005182384-a83a8bd57fbe?q=80&w=1200&auto=format&fit=crop" />
+
+    <!-- Favicon -->
+    <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>✨</text></svg>">
+
     <script src="https://cdn.tailwindcss.com"></script>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800&display=swap" rel="stylesheet">
     <script>
@@ -39,7 +61,7 @@
     </script>
     <style>
       body {
-        background-color: #000;
+        background-color: #050505;
         color: white;
         overflow-x: hidden;
       }
